# CMOS_Venc

./: CMakeLists.txt  README.md  build.sh
src/: CMakeLists.txt  main.c  sample_hdmi_path.c  sample_hdmi_path.h  sample_vii_hdmi.c  sample_vii_hdmi.h
vs-mp/common/: image_file_util.c  image_file_util.h  sample_common.h  sample_common_audio.c  sample_common_mipitx.c  sample_common_mipitx.h  sample_common_nn.c  sample_common_rgn.c  sample_common_sys.c  sample_common_vdec.c  sample_common_venc.c  sample_common_vii.c  sample_common_vo.c  sample_common_vpp.c  sample_pciv_common.h  vs_aac_codec.h
vs-mp/include/: vs_acodec_ioctl.h  vs_audio_defines.h  vs_avs_cal_defines.h  vs_avs_defines.h  vs_buffer.h  vs_capability.h  vs_cipher_defines.h  vs_comm.h  vs_comm_video.h  vs_dsp_defines.h  vs_errno.h  vs_fb_defines.h  vs_gdc_defines.h  vs_gpe_defines.h  vs_hdmi_defines.h  vs_isp_defines.h  vs_ispcal_defines.h  vs_ive_defines.h  vs_log_defines.h  vs_mal_ae.h  vs_mal_audio.h  vs_mal_avs.h  vs_mal_avs_cal.h  vs_mal_awb.h  vs_mal_cipher.h  vs_mal_dsp.h  vs_mal_gdc.h  vs_mal_gpe.h  vs_mal_hdmi.h  vs_mal_img_sensor.h  vs_mal_isp.h  vs_mal_isp_img_sensor.h  vs_mal_ispcal.h  vs_mal_ive.h  vs_mal_log.h  vs_mal_mipi_rx.h  vs_mal_mipi_tx.h  vs_mal_mmz.h  vs_mal_nn.h  vs_mal_pciv.h  (+30 more)
vs-mp/include/ks/: vs_vii_ks_export.h
vs-mp/lib/: libasound.so.2.0.0
vs-mp/lib/modules/: lsm6dsx.ko  sil902x.ko  vs_acodec.ko  vs_adec.ko  vs_aenc.ko  vs_ain.ko  vs_aio.ko  vs_aout.ko  vs_avs.ko  vs_base.ko  vs_cipher.ko  vs_diag.ko  vs_dma.ko  vs_dsp.ko  vs_fb.ko  vs_gdc.ko  vs_gpe.ko  vs_hdmi.ko  vs_init.ko  vs_ipcm.ko  vs_ispbe.ko  vs_ispfe.ko  vs_ive.ko  vs_mipi_rx.ko  vs_mipi_tx.ko  vs_osal.ko  vs_pciv.ko  vs_pciv_dma_host.ko  vs_pciv_dma_slave.ko  vs_regtools.ko  vs_rgn.ko  vs_sys.ko  vs_tdc.ko  vs_vpp.ko  vs_ysum.ko
